--- a/real_time_box_plot.ipynb
+++ b/real_time_box_plot.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import pandas as pd"
+    "import shutil\n",
+    "import csv\n",
+    "import os"
    ]
   },
   {
